# typed-transformer

./: .gitignore  Dockerfile  README.md  flake.nix  git-sync.sh  pyproject.toml  pyrightconfig.json
stubs/equinox/: __init__.pyi  _module.pyi
stubs/equinox/nn/: __init__.pyi
stubs/jax/: __init__.pyi  random.pyi  tree_util.pyi
stubs/jax/nn/: __init__.pyi
stubs/numpy/: __init__.pyi
stubs/optax/: __init__.pyi
stubs/tqdm/: __init__.pyi  auto.pyi
tt/: architecture.py  attention.py  config.py  data.py  lm.py  util.py
